--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<!-- wac-model -->
-		<dep.version>2.0.0-SNAPSHOT</dep.version>
+		<dep.version>2.1.0.RELEASE</dep.version>
 		<wac.common.version>2.0.0-SNAPSHOT</wac.common.version>
 		<!-- 3rd -->
 		<org.quartz.version>2.3.0</org.quartz.version>
